Remove MaxPermSize flag from maven configuration