@@ -248,7 +248,7 @@
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>-XX:MaxPermSize=128m ${jacoco.agent.it.arg} -Dauth.enabled=${auth.enabled}</argLine>
+          <argLine>${jacoco.agent.it.arg} -Dauth.enabled=${auth.enabled}</argLine>
         </configuration>
         <executions>
           <execution>
